  to nonsensical "type t is not compatible with type t" submessage
  (Florian Angeletti, report by Basile Clément, review by Gabriel Scherer)

- #14238: Fix certain variadic macros in misc.h which could trigger C warnings
  under certain conditions in prerelease versions of OCaml 5.4.
  (Antonin Décimo, review by Nicolás Ojeda Bär)

OCaml 5.3.0 (8 January 2025)
----------------------------

(Changes that can break existing programs are marked with a "*")

### Restored backend:

- #12954: Restore the MSVC port
  (David Allsopp, Antonin Décimo, Samuel Hym, and Miod Vallat, review by Nicolás
   Ojeda Bär)

- #13093: Allow building the MSVC port with clang-cl.
  (Antonin Décimo, review by Nicolás Ojeda Bär, Samuel Hym,
   David Allsopp and Sébastien Hinderer)

### Language features:

- #12309, #13158: Add syntax support for deep effect handlers
  (Leo White, Tom Kelly, Anil Madhavapeddy, KC Sivaramakrishnan, Xavier Leroy
   and Florian Angeletti, review by the same, Hugo Heuzard, and Ulysse Gérard)

- #11736, #12664, #13628: Support utf-8 encoded source files and latin-9
  compatible identifiers.
  (Xavier Leroy and Florian Angeletti, review by Daniel Bünzli and
   Jules Aguillon)


- #12828, #13283: Add short syntax for dependent functor types `(X:A) -> ...`
  (Jeremy Yallop, review by Nicolás Ojeda Bär and Gabriel Scherer)

### Type system

- #11891, #12507: Allow to name new locally abstract types in constructor type
  annotations.
  (Jacques Garrigue, report and review by Gabriel Scherer and Florian Angeletti)

### Runtime system:

- #11911, #12923: Multicore statistical memory profiling.
  This restores a notable OCaml 4 feature that was missing
  in OCaml 5.
  (Nick Barnes, review by Stephen Dolan, Jacques-Henri Jourdan
   and Guillaume Munch-Maccagnoni).


- #13419: Fix memory bugs in runtime events system.
  (B. Szilvasy and Nick Barnes, review by Miod Vallat, Nick Barnes,
   Tim McGilchrist, and Gabriel Scherer)
